@@ -1,4 +1,8 @@
-﻿drkns 01.02.2016 01:11:06 +0200 - build 4526
+﻿drkns 01.02.2016 03:16:02 +0200 - build 4527
+
+1. Продолжение 4525.
+
+drkns 01.02.2016 01:11:06 +0200 - build 4526
 
 1. Говорят, после 4516 странно работала средняя кнопка мыши в панелях.
 
